--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.HomeActivity"></activity>
+        <activity android:name=".View.settings"></activity>
+        <activity android:name=".View.HomeActivity" />
         <activity android:name=".View.RegistrationActivity" />
         <activity android:name=".View.LoginActivity" />
         <activity android:name=".MainActivity">
