--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.HomeActivity"
-            android:windowSoftInputMode="adjustNothing"
-            ></activity>
+        <activity android:name=".View.SubFolderActivity"></activity>
+        <activity
+            android:name=".View.HomeActivity"
+            android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".View.RegistrationActivity" />
         <activity android:name=".View.LoginActivity" />
         <activity android:name=".MainActivity">
