--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".View.MessageActivity"></activity>
         <activity android:name=".View.PateintHomeInfo"></activity>
         <activity android:name=".View.AddNewPrecription" />
         <activity android:name=".View.DisplayDoctorPrescritions" />
